<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_marginTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btBuscaConsu1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/buscar_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btBuscaConsu2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:text="@string/buscar_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btBuscaConsu1" />

    <Button
        android:id="@+id/btCalcular"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="242dp"
        android:layout_height="79dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="84dp"
        android:text="@string/calcular_consumo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nrLitroGasolina.edit_text" />

    <TextView
        android:id="@+id/tvResultadoCalc"
        android:layout_width="332dp"
        android:layout_height="61dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btCalcular" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nrConsGasolina.edit_text"
        android:layout_width="190dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/btBuscaConsu1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btBuscaConsu1"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nrConsGasolina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/consumo_gasolina"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="190dp"
        android:layout_height="43dp"
        app:layout_constraintBottom_toBottomOf="@+id/btBuscaConsu2"
        app:layout_constraintStart_toStartOf="@+id/nrConsGasolina.edit_text"
        app:layout_constraintTop_toTopOf="@+id/btBuscaConsu2"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nrConsEtanol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/consumo_etanol"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nrConsEtanol.edit_text"
        android:layout_width="190dp"
        android:layout_height="43dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="@+id/nrConsGasolina.edit_text"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nrLitroGasolina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/litro_gasolina"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nrLitroGasolina.edit_text"
        android:layout_width="190dp"
        android:layout_height="43dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/nrConsEtanol.edit_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nrLitroEtanol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/litro_etanol"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>